--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,11 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<dependency>
+		    <groupId>org.apache.commons</groupId>
+		    <artifactId>commons-jexl3</artifactId>
+		    <version>3.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
